# canto_mando_corpus

./: .gitignore  Cargo.toml  README.md  bad_words.txt  canto_mando_dict.txt  canto_mando_words.txt  classifier.py  filter_characters.py  filter_mandarin_sentences.py  filter_sentences.py  get_marked_cantonese_words.py  marked_yue_to_zh_translation.txt  marked_yue_words.txt  open_dict_yue_words.txt  parse_canto_mando_dict.py  parse_dgk.py  parse_douban.py  preprocess.py  pyproject.toml  sample_segmentation.txt  segment_sentences.py  segmentation_results.txt  segmentation_truth.txt  test_segmentation.py  translate_marked_yue_words.py  vocab.zh-yue.txt  yue_words.txt  yue_zh_eval.py  yue_zh_results.txt  yue_zh_sentences.txt
LCCC-base-split/: cn_sentences_to_hk.py  lccc_to_sentences.py
bart_typo_fixer/: test.ipynb
bart_typo_fixer/.ipynb_checkpoints/: test-checkpoint.ipynb
embedding/: test.ipynb
embedding/.ipynb_checkpoints/: test-checkpoint.ipynb
parallel/: valid_test_split.py  yue_test.txt  yue_valid.txt  yue_zh.json  zh_test.txt  zh_valid.txt
src/: main.rs
word_segmentation/: segmentation_results.txt  segmentation_truth.txt
word_segmentation/src/cantoseg/: cantoseg.py
