[tool.poetry]
name = "lihkg-processor"
version = "0.1.0"
description = ""
authors = ["Kevin Li <kevinli020508@gmail.com>"]
readme = "README.md"
packages = [{include = "lihkg_processor"}]

[tool.poetry.dependencies]
python = "^3.11"
pycantonese = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
